SKA-512: Addressed second round of PR requests

--- a/adapter/CMakeLists.txt
+++ b/adapter/CMakeLists.txt
@@ -3,10 +3,6 @@ add_executable( sil-kit-adapter-byte-stream-socket
     "SilKitAdapterByteStreamSocket.cpp"
 )
 
-target_include_directories( sil-kit-adapter-byte-stream-socket 
-    PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
-)
-
 target_link_libraries( sil-kit-adapter-byte-stream-socket
     PRIVATE
         asio
@@ -22,6 +18,10 @@ set_target_properties( sil-kit-adapter-byte-stream-socket
     RUNTIME_OUTPUT_DIRECTORY $<$<BOOL:ALWAYS>:${SILKIT_ADAPTER_BYTE_STREAM_SOCKET_OUTPUT_DIRECTORY}>
 )
 
+add_custom_command( TARGET sil-kit-adapter-byte-stream-socket POST_BUILD
+    COMMAND ${CMAKE_COMMAND}
+    ARGS -E copy $<TARGET_FILE:SilKit::SilKit> ${SILKIT_ADAPTER_BYTE_STREAM_SOCKET_LIBRARY_DIRECTORY}/libSilKit.so
+)
 add_custom_command( TARGET sil-kit-adapter-byte-stream-socket POST_BUILD
     COMMAND ${CMAKE_COMMAND}
     ARGS -E copy $<TARGET_FILE:SilKit::SilKit> ${SILKIT_ADAPTER_BYTE_STREAM_SOCKET_LIBRARY_DIRECTORY}/libSilKit.so
