--- a/adapter/CMakeLists.txt
+++ b/adapter/CMakeLists.txt
@@ -18,11 +18,10 @@ set_target_properties( sil-kit-adapter-byte-stream-socket
     RUNTIME_OUTPUT_DIRECTORY $<$<BOOL:ALWAYS>:${SILKIT_ADAPTER_BYTE_STREAM_SOCKET_OUTPUT_DIRECTORY}>
 )
 
-add_custom_command( TARGET sil-kit-adapter-byte-stream-socket POST_BUILD
-    COMMAND ${CMAKE_COMMAND}
-    ARGS -E copy $<TARGET_FILE:SilKit::SilKit> ${SILKIT_ADAPTER_BYTE_STREAM_SOCKET_LIBRARY_DIRECTORY}/libSilKit.so
-)
-add_custom_command( TARGET sil-kit-adapter-byte-stream-socket POST_BUILD
-    COMMAND ${CMAKE_COMMAND}
-    ARGS -E copy $<TARGET_FILE:SilKit::SilKit> ${SILKIT_ADAPTER_BYTE_STREAM_SOCKET_LIBRARY_DIRECTORY}/libSilKit.so
+include( ${CMAKE_CURRENT_LIST_DIR}/../common/cmake/Building.cmake )
+
+copy_sil_kit_to_bin(
+  sil-kit-adapter-byte-stream-socket
+  ${SILKIT_ADAPTER_BYTE_STREAM_SOCKET_OUTPUT_DIRECTORY}
+  ${SILKIT_ADAPTER_BYTE_STREAM_SOCKET_LIBRARY_DIRECTORY}
 )
