--- a/.github/workflows/build-linux-and-windows-release.yml
+++ b/.github/workflows/build-linux-and-windows-release.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   linux-release:
-    name: Build SIL Kit Adapter QEMU for Linux Release configuration
+    name: Build SIL Kit Adapter Byte Stream Socket for Linux Release configuration
     environment: public-github-runners
     runs-on: ubuntu-20.04
     steps:
@@ -29,7 +29,7 @@ jobs:
             _build/linux-release/SilKit-Adapter*.zip
 
   windows-release:
-    name: Build SIL Kit Adapter QEMU for Windows Release configuration
+    name: Build SIL Kit Adapter Byte Stream Socket for Windows Release configuration
     runs-on: windows-latest
     environment: public-github-runners
     steps:
