SKA-512: Fixed CANoe configuration and socat script length.
socat script will run infinitely unless you specify a positive -Num argument

--- a/demos/CANoe/Bytestream_observer.cfg
+++ b/demos/CANoe/Bytestream_observer.cfg
@@ -1,4 +1,4 @@
-;CANoe Version |4|17|0|35877 Bytestream_observer 
+;CANoe Version |4|17|0|35873 Bytestream_observer 
 Version: 17.3.91 Build 91
 32 PRO
 5
@@ -977,14 +977,14 @@ End_Of_Object VGlobalVariableSettings 3
 VGeneralLoggingBlockSettings 3 Begin_Of_Object
 3
 2000
-1
+2
 0
 3
 1
 End_Of_Object VGeneralLoggingBlockSettings 3
 0
 0
-3
+4
 0
 1
 SecurityManager::VSecurityManager 3 Begin_Of_Object
@@ -1068,7 +1068,7 @@ Begin_Of_Multi_Line_String
   Copyright (c) 2001-2014 Actipro Software LLC.  All rights reserved.
   http://www.actiprosoftware.com
 
---><ToolWindowLayout Version="1.0"><LayoutData><HostContainerControl><ToolWindowContainer Dock="Bottom" Size="3440, 205" SelectedToolWindowGuid="89fe00f4-5a9b-4274-8aa4-015098154cb0"><ToolWindow Key="{F25C396A-C995-456C-886A-5D0AE3F0D186}" Guid="89fe00f4-5a9b-4274-8aa4-015098154cb0" DockedSize="201, 201" FloatingSize="395, 190" HasOptions="False" ImageIndex="-1" Text="Write" TitleBarText="Write"><AutoHideStateInfo RootDock="Bottom" /><DockedInsideHostStateInfo RootDock="Bottom" IsAttached="False" /><DockedOutsideHostStateInfo IsAttached="False" /></ToolWindow></ToolWindowContainer></HostContainerControl><AutoHide Dock="Left" /><AutoHide Dock="Right" /><AutoHide Dock="Top" /><AutoHide Dock="Bottom" /><TabbedDocuments Orientation="Horizontal" /><FloatingContainers /><Hidden><ToolWindow Key="{F5E09530-AAE7-48d9-B925-CEF5027AA97D}" Guid="32e4b564-02ec-46fd-9296-f6315c198b9d" State="DockableInsideHost" DockedSize="325, 325" FloatingSize="325, 380"><AutoHideStateInfo RootDock="Left" /><Dock
+--><ToolWindowLayout Version="1.0"><LayoutData><HostContainerControl><ToolWindowContainer Dock="Bottom" Size="1920, 132" SelectedToolWindowGuid="89fe00f4-5a9b-4274-8aa4-015098154cb0"><ToolWindow Key="{F25C396A-C995-456C-886A-5D0AE3F0D186}" Guid="89fe00f4-5a9b-4274-8aa4-015098154cb0" DockedSize="201, 128" FloatingSize="395, 190" HasOptions="False" ImageIndex="-1" Text="Write" TitleBarText="Write"><AutoHideStateInfo RootDock="Bottom" /><DockedInsideHostStateInfo RootDock="Bottom" IsAttached="False" /><DockedOutsideHostStateInfo IsAttached="False" /></ToolWindow></ToolWindowContainer></HostContainerControl><AutoHide Dock="Left" /><AutoHide Dock="Right" /><AutoHide Dock="Top" /><AutoHide Dock="Bottom" /><TabbedDocuments Orientation="Horizontal" /><FloatingContainers /><Hidden><ToolWindow Key="{F5E09530-AAE7-48d9-B925-CEF5027AA97D}" Guid="32e4b564-02ec-46fd-9296-f6315c198b9d" State="DockableInsideHost" DockedSize="325, 325" FloatingSize="325, 380"><AutoHideStateInfo RootDock="Left" /><Dock
 kPersistNoLineBreak
 edInsideHostStateInfo RootDock="Left" IsAttached="False" /><DockedOutsideHostStateInfo IsAttached="False" /></ToolWindow></Hidden></LayoutData><CustomData /></ToolWindowLayout>
 End_Of_Serialized_Data 3
@@ -1363,7 +1363,7 @@ End_Of_Object VTraceFilterCfg 19
 6
 1
 18
-GFver=5;ver=5: FT TF TF FT FT FF FF FF FF TF;F T _Security;F T testBytestreamSocketDemo;F T CANoe;F T _CCS
+GFver=5;ver=5: FT TF TF FT FT FF FF FF FF TF;F T _Security;F T CANoe;F T _CCS;F T testBytestreamSocketEchoDemo
 End_Of_Serialized_Data 18
 7
 0
@@ -3370,7 +3370,7 @@ VUniqueBox 20 Begin_Of_Object
 VBoxRoot 21 Begin_Of_Object
 1
 1
-0 3 0 1 -1 -1 -8 -31 651 198 1412 651
+0 1 0 1 -1 -1 -1 -1 474 186 1121 572
 Trace
 1
 
@@ -3389,7 +3389,7 @@ END_OF_DOCK_INFO
 2231 979
 END_OF_DESKTOP_DATA
 6
-2 3 -1 -1 -8 -31 0 0 1274 595
+2 3 -1 -1 -1 -1 0 0 1274 595
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
@@ -3400,15 +3400,15 @@ END_OF_DOCK_INFO
 3440 1042
 END_OF_DESKTOP_DATA
 6
-0 1 -1 -1 -8 -31 651 198 1412 651
+0 1 -1 -1 -1 -1 474 186 1121 572
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-3
+1
 0
 0
 1
-3440 1042
+1920 712
 END_OF_DESKTOP_DATA
 END_OF_DESKTOP_DATA_COLLECTION
 0
@@ -3481,7 +3481,7 @@ VUniqueBox 20 Begin_Of_Object
 VBoxRoot 21 Begin_Of_Object
 1
 1
-1 2 0 1 -1 -1 -1 -1 651 0 1412 197
+1 0 0 1 -1 -1 -1 -1 474 0 1121 185
 Data
 1
 
@@ -3511,15 +3511,15 @@ END_OF_DOCK_INFO
 1008 598
 END_OF_DESKTOP_DATA
 6
-0 1 -1 -1 -1 -1 651 0 1412 197
+0 1 -1 -1 -1 -1 474 0 1121 185
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-2
+0
 0
 0
 1
-3440 1042
+1920 712
 END_OF_DESKTOP_DATA
 END_OF_DESKTOP_DATA_COLLECTION
 0
@@ -3604,7 +3604,7 @@ VLogCfgData 18 Begin_Of_Object
 0
 3
 1
-1
+2
 1
 1
 0
@@ -3668,12 +3668,12 @@ End_Of_Serialized_Data 18
 
 
 <VFileName V9 QL> 1 "{LoggingBlock}.mdf" 
-<VFileName V9 QL> 1 ".mdf" 
+<VFileName V9 QL> 1 "Data_Tabular.mdf" 
 1
 1
 <VFileName V9 QL> 1 "{LoggingBlock}.mdf" 
 0
-145530da-d9b4-48a3-96ee-abdef09b87fd
+3f767004-981d-4f3e-bb40-164685eed7ff
 1
 VLoggingComment 19 Begin_Of_Object
 1
@@ -4430,7 +4430,7 @@ VLogCfgData 18 Begin_Of_Object
 0
 3
 0
-1
+2
 1
 1
 0
@@ -4494,7 +4494,7 @@ End_Of_Serialized_Data 18
 
 
 <VFileName V9 QL> 1 "..\..\..\..\..\CANoe Installs\Vector_CANoe_15.0.83\Templates\CANoe\{LoggingBlock}.mdf" 
-<VFileName V9 QL> 1 "..\..\..\..\..\CANoe Installs\Vector_CANoe_15.0.83\Templates\CANoe" 
+<VFileName V9 QL> 1 "..\..\..\..\..\CANoe Installs\Vector_CANoe_15.0.83\Templates\CANoe\Data.mdf" 
 1
 -842150451
 <VFileName V9 QL> 1 "..\..\..\..\..\CANoe Installs\Vector_CANoe_15.0.83\Templates\CANoe\{LoggingBlock}.mdf" 
@@ -4845,7 +4845,7 @@ VLogCfgData 19 Begin_Of_Object
 0
 3
 0
-1
+2
 1
 1
 0
@@ -4909,7 +4909,7 @@ End_Of_Serialized_Data 19
 
 
 <VFileName V9 QL> 1 "..\..\..\..\..\CANoe Installs\Vector_CANoe_15.0.83\Templates\CANoe\{LoggingBlock}.mdf" 
-<VFileName V9 QL> 1 "..\..\..\..\..\CANoe Installs\Vector_CANoe_15.0.83\Templates\CANoe" 
+<VFileName V9 QL> 1 "..\..\..\..\..\CANoe Installs\Vector_CANoe_15.0.83\Templates\CANoe\Graphics.mdf" 
 1
 -842150451
 <VFileName V9 QL> 1 "..\..\..\..\..\CANoe Installs\Vector_CANoe_15.0.83\Templates\CANoe\{LoggingBlock}.mdf" 
@@ -5152,7 +5152,7 @@ VLogCfgData 21 Begin_Of_Object
 0
 3
 0
-1
+2
 1
 1
 0
@@ -5332,7 +5332,7 @@ VLogCfgData 16 Begin_Of_Object
 0
 3
 1
-1
+2
 1
 1
 0
@@ -5612,7 +5612,7 @@ End_Of_Object VGrMnBox 3
 VDOLocalInfoStruct 3 Begin_Of_Object
 4
 1
-86
+92
 VDAOBus 4 Begin_Of_Object
 1
 1
@@ -5665,6 +5665,9 @@ Misc
 SS_END_COMMON_INFO
 
 
+
+
+
 EOF_BUSDATA
 0
 _Start_VPRBSManager 1 
@@ -5713,7 +5716,7 @@ END_OF_DOCK_INFO
 END_OF_DESKTOP_DATA
 6
 0 1 -1 -1 -1 -1 0 404 395 598
-6 1 0 0 0 0 0 0 395 190 0 0 1 36756 1904 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 1 0 0 0 1 201 0 59422 1 
+6 1 0 0 0 0 0 0 395 190 0 0 1 36756 1904 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 1 0 0 0 1 128 0 59422 1 
 END_OF_DOCK_INFO
 1
 1
@@ -5786,7 +5789,7 @@ End_Of_Serialized_Data 2
 End_Of_Object VWriteBox 2
 VWinStore 2 Begin_Of_Object
 1
-22 2 3 -1 -1 -1 -1 102 162 1818 1451
+22 2 3 -1 -1 -1 -1 184 0 1916 1079
 End_Of_Child_List
 End_Of_Object VWinStore 2
 VWinStore 2 Begin_Of_Object
@@ -6758,7 +6761,7 @@ _size
 1
 Int32
 _version
-133
+149
 --TextFormatter: End of Object--
 TypeRef:8
 9
@@ -6825,7 +6828,7 @@ _size
 9
 Int32
 _version
-138
+168
 --TextFormatter: End of Object--
 TypeRef:10
 13
@@ -7056,7 +7059,7 @@ VLogCfgData 3 Begin_Of_Object
 0
 3
 0
-1
+2
 1
 1
 0
@@ -7244,7 +7247,7 @@ VUniqueBox 5 Begin_Of_Object
 VBoxRoot 6 Begin_Of_Object
 1
 3
-1 0 0 1 -1 -1 -1 -1 994 0 1408 571
+1 1 0 1 -1 -1 -1 -1 994 0 1408 571
 Test Setup for Test Units
 1
 
@@ -7256,7 +7259,7 @@ MDI_DOCK_INFO_END
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-0
+1
 0
 0
 1
@@ -7267,7 +7270,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-0
+1
 0
 0
 0
@@ -7278,7 +7281,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-0
+1
 0
 0
 1
@@ -7386,7 +7389,7 @@ VTestConfigurationConfigData 5 Begin_Of_Object
 0
 1
 0
-<VFileName V9 QL> 1 "Report_testBytestreamSocketDemo.vtestreport" 
+<VFileName V9 QL> 1 "Report_testBytestreamSocketEchoDemo.vtestreport" 
 1
 <VFileName V9 BQL> 1 base=app "testunit_report\onepage.xslt" 
 0
@@ -7418,7 +7421,7 @@ End_Of_Serialized_Data 5
 0
 0
 0
-Report_testBytestreamSocketDemo.vtestreport
+Report_testBytestreamSocketEchoDemo.vtestreport
 0
 0
 0
@@ -7443,7 +7446,7 @@ End_Of_Serialized_Data 6
 End_Of_Object VIPBStackSetting 6
 0
 0
-<VFileName V9 QL> 1 "Report_testBytestreamSocketDemo.vtestreport" 
+<VFileName V9 QL> 1 "Report_testBytestreamSocketEchoDemo.vtestreport" 
 5
 NULL
 End_Of_Serialized_Data 5
@@ -7464,8 +7467,8 @@ VUniqueBox 7 Begin_Of_Object
 VBoxRoot 8 Begin_Of_Object
 1
 3
-1 4 0 1 -1 -1 -1 -1 1413 0 2208 651
-testBytestreamSocketDemo
+1 4 0 1 -1 -1 -1 -1 1122 0 1696 572
+testBytestreamSocketEchoDemo
 1
 
 MDI_DOCK_INFO_END
@@ -7480,7 +7483,7 @@ END_OF_DOCK_INFO
 0
 0
 0
-2560 975
+3440 1018
 END_OF_DESKTOP_DATA
 6
 0 1 0 0 -1 -1 512 195 2048 780
@@ -7494,7 +7497,7 @@ END_OF_DOCK_INFO
 0 0
 END_OF_DESKTOP_DATA
 6
-0 1 -1 -1 -1 -1 1413 0 2208 651
+0 1 -1 -1 -1 -1 1122 0 1696 572
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
@@ -7502,7 +7505,7 @@ END_OF_DOCK_INFO
 0
 0
 1
-3440 1042
+1920 712
 END_OF_DESKTOP_DATA
 END_OF_DESKTOP_DATA_COLLECTION
 0
@@ -7568,7 +7571,7 @@ Application
 String
 TestConfigPersistence
 1
-100;200;True;100;True;779;612;;60
+284;198;True;100;True;558;530;0;30
 
 mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089
 System.Collections.Generic.List`1[[System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089]]
@@ -7630,10 +7633,49 @@ Count
 0
 --TextFormatter: End of Object--
 End_Of_Object VNETStandaloneComponent 5
-testBytestreamSocketDemo
+testBytestreamSocketEchoDemo
+1
+VTestUnit 5 Begin_Of_Object
+13
+VTestUnitConfigData 6 Begin_Of_Object
+3
+0
+0
+0
+
+
 0
 1
--1
+1
+<VFileName V9 QL> 1 "..\tests\Report_testBytestreamSocketEchoDemo.vtestreport" 
+<VFileName V9 BQL> 1 base=app "testunit_report\onepage.xslt" 
+..\tests\Report_testBytestreamSocketEchoDemo.vtestreport
+<VFileName V9 QL> 1 "..\tests\Report_testBytestreamSocketEchoDemo.vtestreport" 
+End_Of_Object VTestUnitConfigData 6
+<VFileName V9 QL> 1 "..\tests\testBytestreamSocketEchoDemo.vtestunit.yaml" 
+testBytestreamSocketEchoDemo
+0
+0
+3jgl0sdeki9u
+<VFileName V9 QL> 0 "" 
+0
+<VFileName V9 QL> 0 "" 
+
+0
+
+testBytestreamSocketEchoDemo
+0
+0
+0
+<VFileName V9 QL> 0 "" 
+
+<VFileName V9 QL> 0 "" 
+1
+1
+<VFileName V9 QL> 1 "..\tests\testBytestreamSocketEchoDemo.vtestunit.yaml" 
+End_Of_Object VTestUnit 5
+1
+0
 4
 NULL
 End_Of_Serialized_Data 4
@@ -7665,9 +7707,9 @@ Begin_Of_Multi_Line_String
 &lt;/z:anyType&gt;</VariantProfiles>
 </settings>
 End_Of_Serialized_Data 4
-<VFileName V9 QL> 0 "" 
-1
-<VFileName V9 QL> 0 "" 
+<VFileName V9 QL> 1 "Report_testBytestreamSocketEchoDemo.vtestreport" 
+2
+<VFileName V9 QL> 1 "rpt609a.vtestreport" 
 End_Of_Object VTestConfiguration 4
 0
 1
@@ -8809,7 +8851,7 @@ Begin_Of_Multi_Line_String
     "vCDL": {
       "$id": "3",
       "IncludeFiles": [
-        "D:\\vfs\\SilKit\\sil-kit-adapters-byte-stream-socket\\demos\\CANoe\\Datasources_observer.vCDL"
+        ".\\Datasources_observer.vCDL"
       ],
       "FileType": 3,
       "Version": 0,
@@ -8818,7 +8860,7 @@ Begin_Of_Multi_Line_String
         {
           "$id": "4",
           "Type": 3,
-          "Path": "D:\\vfs\\SilKit\\sil-kit-adapters-byte-stream-socket\\demos\\CANoe\\Datasources_observer.vCDL",
+          "Path": ".\\Datasources_observer.vCDL",
           "Name": "Datasources_observer.vCDL",
           "Version": "1.4"
         }
@@ -9130,7 +9172,7 @@ OverallModel
 <LogFileMergeMode>ByMeasurementTime</LogFileMergeMode>
 <RootGroup xmlns="" i:type="RootGroup">
 <OfflineSources xmlns:d4p1="http://schemas.microsoft.com/2003/10/Serialization/Arrays" />
-<Id>257e13a5-bf51-4221-a822-69fa5439a9d3</Id>
+<Id>856050ff-5c02-459d-8c98-861131db1f73</Id>
 <UserOffset>0</UserOffset>
 <MergeMode>0</MergeMode>
 <ChannelMappingSetId i:nil="true" />
@@ -10066,8 +10108,8 @@ VUniqueBox 5 Begin_Of_Object
 VBoxRoot 6 Begin_Of_Object
 1
 3
-1 1 0 1 -1 -1 -1 -1 0 0 993 571
-Communication Setup
+1 0 0 1 -1 -1 -1 -1 0 0 993 571
+Function Bus Setup
 1
 
 MDI_DOCK_INFO_END
@@ -10078,7 +10120,7 @@ MDI_DOCK_INFO_END
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-1
+0
 0
 0
 1
@@ -10089,7 +10131,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-1
+0
 0
 0
 0
@@ -10100,7 +10142,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-1
+0
 0
 0
 0
@@ -10426,7 +10468,7 @@ Application
 String
 ParameterWindowCtrlPersistence
 1
--1;False;0,200,True;1,60,True;2,60,True;3,75,True;4,21,True;5,50,True;6,75,True;
+-1;False;0,267,True;1,80,True;2,80,True;3,100,True;4,28,True;5,67,True;6,100,True;
 APPDIR Vector.CANalyzer.DiagnosticParameterWindow.DLL
 Vector.CANalyzer.DiagnosticParameterWindow, Version=17.3.91.0, Culture=neutral, PublicKeyToken=null
 Vector.CANalyzer.DiagnosticParameterWindow.Definitions.LastRecentSearchPopupItemList
@@ -10487,6 +10529,11 @@ VttTapClientPersist 2 Begin_Of_Object
 1
 0
 End_Of_Object VttTapClientPersist 2
+VarCodeView
+VVarCodeViewWrapperManager 2 Begin_Of_Object
+1
+0
+End_Of_Object VVarCodeViewWrapperManager 2
 ConnectivitySettings
 Connectivity::VConnectivitySettings 2 Begin_Of_Object
 15
@@ -10553,7 +10600,7 @@ VUniqueBox 6 Begin_Of_Object
 VBoxRoot 7 Begin_Of_Object
 1
 3
-1 0 0 1 -1 -1 -1 -1 0 0 650 325
+1 2 0 1 -1 -1 -1 -1 0 0 473 325
 Namespace::Adapter
 1
 
@@ -10583,15 +10630,15 @@ END_OF_DOCK_INFO
 0 0
 END_OF_DESKTOP_DATA
 6
-0 1 -1 -1 -1 -1 0 0 650 325
+0 1 -1 -1 -1 -1 0 0 473 325
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-0
+2
 0
 0
 1
-3440 1042
+1920 712
 END_OF_DESKTOP_DATA
 END_OF_DESKTOP_DATA_COLLECTION
 0
@@ -10677,7 +10724,7 @@ MainViewPersistency
 6
 <?xml version="1.0" encoding="utf-8"?>
 <MainView xmlns:i="http://www.w3.org/2001/XMLSchema-instance">
-<VerticalSplitterPosition>250</VerticalSplitterPosition>
+<VerticalSplitterPosition>99</VerticalSplitterPosition>
 <HorizontalSplitterPositionLeft>205</HorizontalSplitterPositionLeft>
 <HorizontalSplitterPositionRight>130</HorizontalSplitterPositionRight>
 </MainView>
@@ -10721,7 +10768,7 @@ VUniqueBox 6 Begin_Of_Object
 VBoxRoot 7 Begin_Of_Object
 1
 3
-1 1 0 1 -1 -1 -1 -1 0 326 650 651
+1 3 0 1 -1 -1 -1 -1 0 271 473 596
 Namespace::EchoDevice
 1
 
@@ -10751,15 +10798,15 @@ END_OF_DOCK_INFO
 0 0
 END_OF_DESKTOP_DATA
 6
-0 1 -1 -1 -1 -1 0 326 650 651
+0 1 -1 -1 -1 -1 0 271 473 596
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-1
+3
 0
 0
 1
-3440 1042
+1920 712
 END_OF_DESKTOP_DATA
 END_OF_DESKTOP_DATA_COLLECTION
 0
@@ -10845,7 +10892,7 @@ MainViewPersistency
 6
 <?xml version="1.0" encoding="utf-8"?>
 <MainView xmlns:i="http://www.w3.org/2001/XMLSchema-instance">
-<VerticalSplitterPosition>250</VerticalSplitterPosition>
+<VerticalSplitterPosition>124</VerticalSplitterPosition>
 <HorizontalSplitterPositionLeft>205</HorizontalSplitterPositionLeft>
 <HorizontalSplitterPositionRight>130</HorizontalSplitterPositionRight>
 </MainView>
@@ -10894,7 +10941,7 @@ IntegrationBusPersist 2 Begin_Of_Object
 3
 1
 
-
+silkit://localhost:8501
 
 <VFileName V9 QL> 1 "SilKitConfig_CANoe.silkit.yaml" 
 0
