--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "common"]
 	path = common
-	url = git@github1.vg.vector.int:pnd/sil-kit-adapters-common.git
+	url = https://github.com/vectorgrp/sil-kit-adapters-common.git
