--- a/demos/tests/testBytestreamSocketEchoDemo.vtesttree.yaml
+++ b/demos/tests/testBytestreamSocketEchoDemo.vtesttree.yaml
@@ -1,7 +1,7 @@
 version: 2.1.0
 test-tree:
   - test-fixture: BytestreamSocketTestFixture
+    capl-preparation: PrepareTestscenario
     elements:
       - capl-test-case: DO_WaitForSocketMessage
-      - capl-test-case: DO_WaitForEchoMessage
     
