--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,27 +1,31 @@
-cmake_minimum_required( VERSION 3.12 )
-project( VectorSilKitAdapterByteStreamSocket )
+# SPDX-FileCopyrightText: Copyright 2025 Vector Informatik GmbH
+# SPDX-License-Identifier: MIT
 
-set( SILKIT_ADAPTER_BYTE_STREAM_SOCKET_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin" )
-set( SILKIT_ADAPTER_BYTE_STREAM_SOCKET_LIBRARY_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib" )
+cmake_minimum_required(VERSION 3.13)
+project(VectorSilKitAdapterByteStreamSocket)
 
-set( SILKIT_ADAPTER_BYTE_STREAM_SOCKET_VERSION "1.0.0" )
+set(SILKIT_ADAPTER_BYTE_STREAM_SOCKET_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
+set(SILKIT_ADAPTER_BYTE_STREAM_SOCKET_LIBRARY_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib")
 
-include( common/cmake/RepoTargets.cmake )
+include(common/cmake/RepoTargets.cmake)
 
-build_common_demo( 
-  common/demos/SilKitDemoBytesPubSubEchoDevice.cpp
-  sil-kit-demo-byte-stream-echo-device
-  ${SILKIT_ADAPTER_BYTE_STREAM_SOCKET_OUTPUT_DIRECTORY}
+include(${CMAKE_CURRENT_LIST_DIR}/cmake/SilKitAdapterVersion.cmake)
+configure_silkit_adapter_version(${PROJECT_NAME})
+
+add_subdirectory(adapter)
+add_subdirectory(demos)
+
+include(common/cmake/InstallFunctions.cmake)
+
+fix_windows_install_folder(${PROJECT_VERSION})
+
+install_adapter_source(
+    ${CMAKE_CURRENT_SOURCE_DIR}/adapter
+    ${CMAKE_CURRENT_SOURCE_DIR}/cmake
+    ${CMAKE_CURRENT_SOURCE_DIR}/demos
+    ${CMAKE_CURRENT_SOURCE_DIR}/tools
 )
-
-add_subdirectory( adapter )
-
-include( common/cmake/InstallFunctions.cmake )
-
-fix_windows_install_folder( ${SILKIT_ADAPTER_BYTE_STREAM_SOCKET_VERSION} )
-
-install_adapter_source( ${CMAKE_CURRENT_SOURCE_DIR}/adapter )
-install_git_source( ${CMAKE_CURRENT_SOURCE_DIR}/common )
+install_git_source(${CMAKE_CURRENT_SOURCE_DIR}/common)
 install_root_source_files()
 
 install_silkit_lib(
@@ -29,13 +33,26 @@ install_silkit_lib(
     ${SILKIT_ADAPTER_BYTE_STREAM_SOCKET_LIBRARY_DIRECTORY}
 )
 
-install_demo( sil-kit-demo-byte-stream-echo-device )
+install_adapter(sil-kit-adapter-byte-stream-socket)
+install_demo(sil-kit-demo-byte-stream-socket-auto-sender)
 
-install_adapter( sil-kit-adapter-byte-stream-socket )
+include(common/cmake/Packaging.cmake)
 
-include( common/cmake/Packaging.cmake )
+install_scripts_to(demos/CANoe4SW_SE
+    ${CMAKE_CURRENT_SOURCE_DIR}/demos/CANoe4SW_SE/run.sh
+    ${CMAKE_CURRENT_SOURCE_DIR}/demos/CANoe4SW_SE/run_all.sh
+    ${CMAKE_CURRENT_SOURCE_DIR}/demos/CANoe4SW_SE/createEnvironment.sh
+)
+
+install_scripts_to(tools
+    ${CMAKE_CURRENT_SOURCE_DIR}/tools/echo_server.sh
+)
+
+if(NOT DEFINED PACKAGE_FILENAME_SUFFIX)
+    set(PACKAGE_FILENAME_SUFFIX "-${PROJECT_VERSION}")
+endif()
 
 declare_package(
-  "SilKit-Adapter-Byte-Stream-Socket"
-  "binary release of SIL Kit Adapter Byte Stream Socket"
+    "SilKit-Adapter-Byte-Stream-Socket"
+    "binary release of SIL Kit Adapter Byte Stream Socket"
 )
