--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@
 cmake_minimum_required(VERSION 3.13)
 project(VectorSilKitAdapterByteStreamSocket)
 
+option(BUILD_LINUX_PACKAGE "Creates a SIL Kit Adapter Byte Stream Socket build suitable for package managers in Linux Distributions (.deb)" OFF)
+
 set(SILKIT_ADAPTER_BYTE_STREAM_SOCKET_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
 set(SILKIT_ADAPTER_BYTE_STREAM_SOCKET_LIBRARY_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib")
 
@@ -11,6 +13,10 @@ include(common/cmake/RepoTargets.cmake)
 
 include(${CMAKE_CURRENT_LIST_DIR}/cmake/SilKitAdapterVersion.cmake)
 configure_silkit_adapter_version(${PROJECT_NAME})
+
+if(BUILD_LINUX_PACKAGE)
+    add_subdirectory(docs/man)
+endif()
 
 add_subdirectory(adapter)
 add_subdirectory(demos)
@@ -23,6 +29,7 @@ install_adapter_source(
     ${CMAKE_CURRENT_SOURCE_DIR}/adapter
     ${CMAKE_CURRENT_SOURCE_DIR}/cmake
     ${CMAKE_CURRENT_SOURCE_DIR}/demos
+    ${CMAKE_CURRENT_SOURCE_DIR}/docs
     ${CMAKE_CURRENT_SOURCE_DIR}/tools
 )
 install_git_source(${CMAKE_CURRENT_SOURCE_DIR}/common)
